Поправил инициализацию wifi. Сгенерировал нейронкой html css js

--- a/spiffs/index.html
+++ b/spiffs/index.html
@@ -3,69 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gin Column Control</title>
+    <title>Джин Колонна</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
         <h1>Управление Джин Колонной</h1>
     </header>
 
-    <main>
-        <section id="status-section">
-            <h2>Текущее Состояние</h2>
-            <div id="status-display">
-                <p>Куб: <span id="temp-cube">--</span> °C</p>
-                <p>Колонна: <span id="temp-col">--</span> °C</p>
-                <p>Мощность ТЭНа: <span id="power-val">--</span> %</p>
-                <p>Режим: <span id="current-mode">--</span></p>
-            </div>
-            
-            <div id="column-image-container">
-                <img src="images/column.png" alt="Схема колонны" class="column-img">
-            </div>
-        </section>
+    <section id="wifi-section">
+        <h2>Настройка Wi-Fi</h2>
+        <div>
+            <h3>STA (подключение к роутеру)</h3>
+            <input type="text" id="sta-ssid" placeholder="SSID">
+            <input type="password" id="sta-pass" placeholder="Пароль">
+            <button onclick="connectSTA()">Подключить</button>
+            <button onclick="scanNetworks()">Сканировать сети</button>
+            <ul id="wifi-list"></ul>
+        </div>
+        <div>
+            <h3>AP (ESP32 как точка доступа)</h3>
+            <input type="text" id="ap-ssid" placeholder="SSID AP">
+            <input type="password" id="ap-pass" placeholder="Пароль">
+            <button onclick="setupAP()">Настроить AP</button>
+        </div>
+    </section>
 
-        <section id="chart-section">
-            <h2>График Температур и Мощности</h2>
-            <canvas id="tempChart"></canvas> 
-        </section>
+    <section id="status-section">
+        <h2>Состояние</h2>
+        <div id="column-image">
+            <img src="column.png" alt="Колонна">
+        </div>
+        <div id="temperatures">
+            <p>Температура куба: <span id="temp-cube">--</span> °C</p>
+            <p>Температура колонны: <span id="temp-column">--</span> °C</p>
+            <p>Мощность ТЭНа: <span id="ten-power">--</span> %</p>
+        </div>
+        <canvas id="chart" width="600" height="300"></canvas>
+    </section>
 
-        <section id="control-section">
-            <h2>Управление</h2>
-            <label for="mode-select">Выбор режима:</label>
-            <select id="mode-select">
-                <option value="manual">Ручной</option>
-                <option value="auto_heat">Авто: Разгон</option>
-                <option value="auto_stab">Авто: Стабилизация</option>
-                <option value="auto_head">Авто: Отбор Голов</option>
-                </select>
+    <section id="control-section">
+        <h2>Управление</h2>
+        <div>
+            <label>
+                <input type="radio" name="mode" value="manual" checked> Ручной
+            </label>
+            <label>
+                <input type="radio" name="mode" value="auto"> Автоматический
+            </label>
+        </div>
 
-            <div id="manual-controls" class="control-group">
-                <h3>Ручной режим</h3>
-                <label for="power-input">Мощность ТЭНа (%):</label>
-                <input type="number" id="power-input" min="0" max="100" value="0">
-                <button onclick="setPower()">Установить</button>
-            </div>
-            
-        </section>
+        <div id="manual-control">
+            <input type="range" id="manual-power" min="0" max="100" value="50">
+            <span id="manual-power-value">50%</span>
+            <button onclick="setManualPower()">Установить мощность</button>
+        </div>
 
-        <section id="config-section">
-            <h2>Настройки</h2>
-            <button onclick="showWifiConfig()">Настройка Wi-Fi</button>
-            <button onclick="showPidConfig()">Настройка Автоматики</button>
-            </section>
-    </main>
-	
-	<footer style="text-align: right; margin-top: 50px;">
-        <label>Статус LED:</label>
-        <button id="led-on-btn" onclick="toggleLED(1)">Вкл</button>
-        <button id="led-off-btn" onclick="toggleLED(0)">Выкл</button>
-    </footer>
+        <div id="auto-control" style="display:none;">
+            <select id="auto-stage">
+                <option value="1">Этап 1</option>
+                <option value="2">Этап 2</option>
+                <option value="3">Этап 3</option>
+            </select>
+            <button onclick="setAutoStage()">Выбрать этап</button>
+        </div>
 
-    <script src="chart_lib.js"></script>
+        <button onclick="toggleLED()">LED Вкл/Выкл</button>
+    </section>
+
+    <script src="chart.umd.min.js"></script>
     <script src="app.js"></script>
-
 </body>
 </html>
