--- a/spiffs/index.html
+++ b/spiffs/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Джин Колонна</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <!-- Модальное окно для Wi-Fi AP -->
@@ -37,7 +38,7 @@
             <div class="wifi-button-scanNetworks"> 
                 <button onclick="scanNetworks()">Сканировать сети</button>
             </div>
-            <ul id="wifi-list"></ul>            
+            <ul id="wifi-list" class="wifi-list"></ul>            
         </div>
     </div>
 
@@ -65,7 +66,7 @@
             <div class="btn-wrap has-submenu">
                 <button >Настройка</button>
                 <div class="submenu">
-                    <div>Быстрый запуск</div>
+                    <div onclick="switchSections('tempsensor')">Датчики температуры</div>
                     <div>Расширенный режим</div>
                     <div onclick="beep(2000, 10)">beep</div>
                 </div>
@@ -172,6 +173,30 @@
 
         <section id="statistic-section">
             <canvas id="chart" width="600" height="300"></canvas>
+        </section>
+
+        <section id="temp-sensor-settings">
+            <h2>Настройки датчиков температуры</h2>
+            <text>Для настройки датчиков температуры:</text>
+            <text>1. Отключите все датчики кроме требуемого.</text>
+            <text>2. Нажмите кнопка "Задать" напротив требуемого датчика.</text>
+            </text>
+            <div id="temp-sensor-kube">
+                <label>Датчик расположен на перегонном кубе</label>
+                <div>
+                    <text>ROM: </text> 
+                    <text id="temp-sensor-kube-rom">0xFF 0xFF 0xFF 0xFF 0xFF 0xFF 0xFF 0xFF</text>
+                    <button onclick="TempSensorSettings('cube')">Задать</button>
+                </div>
+            </div>
+            <div id="temp-sensor-column">
+                <label>Датчик расположен на джин колонне</label>
+                <div>
+                    <text>ROM: </text> 
+                    <text id="temp-sensor-column-rom">0xFF 0xFF 0xFF 0xFF 0xFF 0xFF 0xFF 0xFF</text>
+                    <button onclick="TempSensorSettings('column')">Задать</button>
+                </div>
+            </div>            
         </section>
     </div>
 
